# Velocity-Bench

./: .gitattributes  .gitignore  README.md  THIRD-PARTY-PROGRAMS
QuickSilver/SYCL/: CMakeLists.txt
QuickSilver/SYCL/src/: AtomicMacro.hh  CollisionEvent.hh  CycleTracking.hh  DeclareMacro.hh  DirectionCosine.cc.dp.cpp  DirectionCosine.hh  EnergySpectrum.cc  EnergySpectrum.hh  GlobalFccGrid.cc.dp.cpp  Globals.hh  GridAssignmentObject.cc.dp.cpp  GridAssignmentObject.hh  InputBlock.cc  MCT.hh  MC_Base_Particle.hh  MC_Distance_To_Facet.hh  MC_Domain.cc.dp.cpp  MC_Domain.hh  MC_Facet_Crossing_Event.hh  MC_Location.hh  MC_Nearest_Facet.hh  MC_Particle.hh  MC_Particle_Buffer.cc  MC_Processor_Info.hh  MC_RNG_State.hh  MC_Segment_Outcome.hh  MC_SourceNow.hh  MC_Time_Info.hh  MC_Vector.hh  MacroscopicCrossSection.hh  Makefile.dpct  MaterialDatabase.hh  MemoryControl.hh  MeshPartition.hh  MonteCarlo.cc.dp.cpp  MonteCarlo.hh  MpiCommObject.hh  NuclearData.hh  Parameters.cc  Parameters.hh  (+23 more)
SeisAcoMod2D/CUDA/: CMakeLists.txt
SeisAcoMod2D/CUDA/src/: gpu_modelling_kernels.cu  gpu_modelling_kernels.h  gpumodelling.cu
SeisAcoMod2D/HIP/: CMakeLists.txt
SeisAcoMod2D/HIP/src/: gpu_modelling_kernels.h  gpu_modelling_kernels.hp.cpp  gpumodelling.hp.cpp
SeisAcoMod2D/SYCL/: CMakeLists.txt
SeisAcoMod2D/SYCL/src/: gpu_modelling_kernels.dp.cpp  gpu_modelling_kernels.h  gpumodelling.dp.cpp
bitcracker/CUDA/: CMakeLists.txt
bitcracker/CUDA/src/: aes.h  attack.cu  bitcracker.h  main.cu  w_blocks.cu
bitcracker/HIP/: CMakeLists.txt
bitcracker/HIP/src/: attack.cpp  bitcracker.h  main.cpp  w_blocks.cpp
bitcracker/SYCL/: CMakeLists.txt
bitcracker/SYCL/src/: attack.cpp
cudaSift/CUDA/: CMakeLists.txt  cudaImage.cu  cudaImage.h  cudaSift.h  cudaSiftD.cu  cudaSiftD.h  cudaSiftH.cu  cudaSiftH.h  cudautils.h  mainSift.cpp  matching.cu
cudaSift/HIP/: CMakeLists.txt  cudaImage.cpp  cudaImage.h  cudaSiftD.cpp  cudaSiftH.cpp  cudaSiftH.h  cudautils.h  mainSift.cpp  matching.cpp
cudaSift/SYCL/: CMakeLists.txt  cudaImage.dp.cpp  cudaSiftD.dp.cpp  cudaSiftH.dp.cpp  mainSift.cpp  matching.dp.cpp
cudaSift/SYCL/infra/: atomic.hpp  device.hpp  infra.hpp  memory.hpp
dl-cifar/CUDA/: CMakeLists.txt  blas_routines.h  error_handling.h  handle.h  main.cuda.cpp  upsample.cu  upsample.h
dl-cifar/CUDA/basic-dl/: lnorm_layer.cu  lnorm_layer.h  softmax_layer.cpp  softmax_layer.h
dl-cifar/CUDA/test/: CMakeLists.txt  hello_test.cc
dl-cifar/HIP/: CMakeLists.txt  blas_routines.h  error_handling.h  handle.h  main.hip.cpp  upsample.cu  upsample.h
dl-cifar/HIP/basic-dl/: lnorm_layer.cu  lnorm_layer.h  softmax_layer.cpp  softmax_layer.h
dl-cifar/HIP/test/: CMakeLists.txt
dl-cifar/SYCL/: CMakeLists.txt  blas_routines.h  error_handling.h  handle.h  main.sycl.cpp  upsample.cpp  upsample.h
dl-cifar/SYCL/basic-dl/: lnorm_layer.cpp  lnorm_layer.h  softmax_layer.cpp  softmax_layer.h
dl-mnist/CUDA/: CMakeLists.txt  conv_layer.cudnn.cpp  conv_layer.cudnn.h  dl_network_mgr.cudnn.cpp  dl_network_mgr.cudnn.h  error_handling.cudnn.h  main.cudnn.cpp  tensor_mgr.cudnn.cpp  tensor_mgr.cudnn.h
dl-mnist/SYCL/: CMakeLists.txt  conv_layer.onednn.cpp  conv_layer.onednn.h  dl_network_mgr.onednn.cpp  dl_network_mgr.onednn.h  main.onednn.cpp  tensor_mgr.onednn.cpp  tensor_mgr.onednn.h
easywave/CUDA/: CMakeLists.txt
easywave/CUDA/src/: EasyWave.cpp  ewCudaKernels.cu  ewCudaKernels.cuh  ewGpuNode.cu  ewGpuNode.cuh
easywave/HIP/: CMakeLists.txt
easywave/HIP/src/: EasyWaveGen.cpp  ewCudaKernels.cpp  ewCudaKernels.cuh  ewGpuNode.cpp  ewGpuNode.cuh
easywave/SYCL/: CMakeLists.txt
easywave/SYCL/src/: EasyWave.cpp  ewCudaKernels.cpp  ewCudaKernels.hpp  ewGpuNode.cpp  ewGpuNode.hpp
ethminer/: CMakeLists.txt  README.md  license.md  set_library_vars.sh
ethminer/ethminer/: CMakeLists.txt  DBusInt.h  main.cpp
ethminer/libapicore/: ApiServer.cpp  ApiServer.h  CMakeLists.txt
ethminer/libdevcore/: CMakeLists.txt  Common.h  CommonData.cpp  CommonData.h  Exceptions.h  FixedHash.cpp  FixedHash.h  Guards.h  Log.cpp  Log.h  Terminal.h  Worker.cpp  Worker.h  vector_ref.h
ethminer/libethash-cuda/: CMakeLists.txt  CUDAMiner.cpp  CUDAMiner.h  cuda_helper.h  dagger_shuffled.cuh  ethash_cuda_miner_kernel.cu  ethash_cuda_miner_kernel.h  ethash_cuda_miner_kernel_globals.h  keccak.cuh
ethminer/libethash-hip/: CMakeLists.txt  HIPMiner.cpp  HIPMiner.h  dagger_shuffled.h  ethash_hip_miner_kernel.cpp  ethash_hip_miner_kernel.h  fnv.h  hip_helper.h  keccak.h
ethminer/libethash-sycl/: CMakeLists.txt  SYCLMiner.cpp  SYCLMiner.h  dagger_shuffled.dp.hpp  dpcpp_helper.h  ethash_sycl_miner_kernel.cpp  ethash_sycl_miner_kernel.h  ethash_sycl_miner_kernel_globals.h  fnv.dp.hpp  keccak.dp.hpp
ethminer/libethcore/: CMakeLists.txt  EthashAux.cpp  EthashAux.h  Farm.cpp  Farm.h  Miner.cpp  Miner.h
ethminer/libhwmon/: CMakeLists.txt  wrapadl.cpp  wrapadl.h  wrapamdsysfs.cpp  wrapamdsysfs.h  wraphelper.cpp  wraphelper.h  wrapnvml.cpp  wrapnvml.h
ethminer/libpoolprotocols/: CMakeLists.txt  PoolClient.h  PoolManager.cpp  PoolManager.h  PoolURI.cpp  PoolURI.h
ethminer/libpoolprotocols/getwork/: EthGetworkClient.cpp  EthGetworkClient.h
ethminer/libpoolprotocols/stratum/: EthStratumClient.cpp  EthStratumClient.h
ethminer/libpoolprotocols/testing/: SimulateClient.cpp  SimulateClient.h
hashtable/CUDA/: CMakeLists.txt
hashtable/CUDA/src/: linearprobing.cu  linearprobing.h  main.cpp
hashtable/HIP/: CMakeLists.txt
hashtable/HIP/src/: linearprobing.cpp  (+2 more)
hashtable/SYCL/: CMakeLists.txt
lc0/: LICENSE.md  README.md  buildAMD.sh  buildCuda.sh  buildSycl.sh  meson.build  meson_options.txt
lc0/src/: engine.cc  main.cc  version.h
reverse_time_migration/: CHANGELOG.rst  CMakeLists.txt  CONTRIBUTORS.txt  README.md  config.sh  license.md  main_migration.cpp  main_modelling.cpp  make_run.sh
reverse_time_migration/docs/: README.md
reverse_time_migration/include/: Logging.h
reverse_time_migration/prerequisites/: README.md
reverse_time_migration/src/: CMakeLists.txt
reverse_time_migration/tests/: CMakeLists.txt  README.md  test_main.cpp
(+1271 files in other folders)
